[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "single_fiber"
version = "0.1.0"
description = "Single fibrin fiber simulation with Hookean and WLC force laws"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pytest>=8.0.0",
]

[project.scripts]
single-fiber = "single_fiber.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
